--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -2,6 +2,14 @@ are-you-sure-you-want-to-delete-this=Are you sure you want to delete this?
 aui-aceeditor=[javadoc:com.liferay.faces.alloy.component.aceeditor.AceEditor] is a [javadoc:javax.faces.component.UIInput] component that renders a field for editing source code text.
 aui-aceeditor-default-value=A *default value* can specified using when the [vdldoc:aui:aceEditor:value] attribute is bound via EL to a model bean property. In the example below, the default value of the sourceText property is set inside of the AceEditorModelBean.getSourceText() method.
 aui-aceeditor-general=The component supports *color-coded text* for various programming languages via the [vdldoc:aui:aceEditor:mode] attribute.
+aui-charcounter=[javadoc:com.liferay.faces.alloy.component.charcounter.CharCounter] is a [javadoc:javax.faces.component.UIOutput] component that displays the number of characters remaining for an associated [vdldoc:h:inputText] or [vdldoc:h:inputTextarea].
+aui-charcounter-general=There are two basic ways to use this component:
+aui-charcounter-general-example-1=Use the [vdldoc:aui:charCounter:for] attribute to indicate an [vdldoc:h:inputText] and the [vdldoc:aui:charCounter:value] attribute to render output.
+aui-charcounter-general-example-2=Use the [vdldoc:aui:charCounter:for] attribute to indicate an [vdldoc:h:inputTextarea] and the [vdldoc:aui:charCounter:value] attribute to render output.
+aui-charcounter-default-value=When a *default value* of an associated [vdldoc:h:inputText] or [vdldoc:h:inputTextarea] is specified, then the [vdldoc:aui:charCounter] will calculate the number of remaining characters before rendering.
+aui-charcounter-max-length-events=There are two attributes to use for events:
+aui-charcounter-max-length-reached-1=Use the [vdldoc:aui:charCounter:onMaxlengthReached] attribute to create an event which will be executed *each and every time* that the maxlength is reached.
+aui-charcounter-max-length-reached-2=Use the [vdldoc:aui:charCounter:onceMaxlengthReached] attribute to create an event which will only be executed *the first time* that the maxlength is reached.
 aui-datepicker=[javadoc:com.liferay.faces.alloy.component.datepicker.DatePicker] is a [javadoc:javax.faces.component.UIPanel] component that renders a popup a calendar with selectable dates.
 aui-datepicker-date-pattern=A *custom pattern* can be specified via the [vdldoc:aui:datePicker:datePattern] attribute. The syntax of the date pattern follows the format specified by [javadoc:java.text.SimpleDateFormat].
 aui-datepicker-general=The component can be attached to an [vdldoc:h:inputText] or [vdldoc:h:inputTextarea] via the [vdldoc:aui:datePicker:for] attribute.
@@ -20,7 +28,7 @@ aui-starrating-data-model=The component can display stars *dynamically* when the
 aui-starrating-default-value=A *default value* can be specified using one of two ways:
 aui-starrating-default-value-example-1=Initializing the default value in the model bean.
 aui-starrating-default-value-example-2=Setting the [vdldoc:aui:starRating:defaultSelected] attribute.
-aui-starrating-general=There are two basic ways to *bind* the [vdldoc:aui:starRating:value] attribute this component to a model bean property:
+aui-starrating-general=There are two basic ways to *bind* the [vdldoc:aui:starRating:value] attribute of this component to a model bean property:
 aui-starrating-general-example-1=String value (no converter required)
 aui-starrating-general-example-2=Object value (requires a converter)
 aui-starrating-instant-ajax=The component supports *instant Ajax* by simply adding [vdldoc:f:ajax] as a child tag.
@@ -47,6 +55,7 @@ instant-ajax=Instant Ajax
 like=Like
 locale-from-el=locale from EL
 localization=Localization
+max-length-events=Max Length Events
 min-max-date=Min/Max Date
 model-value=Model Value
 multiple-panes=Multiple Panes
