--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -2,6 +2,23 @@ are-you-sure-you-want-to-delete-this=Are you sure you want to delete this?
 aui-aceeditor=[javadoc:com.liferay.faces.alloy.component.aceeditor.AceEditor] is a [javadoc:javax.faces.component.UIInput] component that renders a field for editing source code text.
 aui-aceeditor-default-value=A *default value* can specified using when the [vdldoc:aui:aceEditor:value] attribute is bound via EL to a model bean property. In the example below, the default value of the sourceText property is set inside of the AceEditorModelBean.getSourceText() method.
 aui-aceeditor-general=The component supports *color-coded text* for various programming languages via the [vdldoc:aui:aceEditor:mode] attribute.
+aui-button=[javadoc:com.liferay.faces.alloy.component.button.Button] is a [javadoc:javax.faces.component.UIOutput] component that renders a styleable HTML `&lt;button&gt;` element. The default [vdldoc:aui:button:type] is `button`. Since it extends [javadoc:javax.faces.component.html.HtmlOutcomeTargetButton], it supports all the features of [vdldoc:h:button]. The component does *not need to be a child* of `h:form` since the [vdldoc:aui:button:outcome] attribute is designed to navigate via HTTP GET.
+aui-button-general=*Children* such as [vdldoc:aui:icon], [vdldoc:h:outputText], and [vdldoc:h:graphicImage] can be specified for styling purposes. Alternatively, the [vdldoc:aui:button:image] and [vdldoc:aui:button:value] attributes can be specified for styling purposes.
+aui-button-general-example-1=Styling via children
+aui-button-general-example-2=Styling via [vdldoc:aui:button:image] attribute
+aui-button-general-example-3=Styling via [vdldoc:aui:button:value] attribute (*Note:* This can only be used if the component does not have any children and the component does not specify an image)
+aui-button-navigation=The component can be used to *navigate* between pages with the [vdldoc:aui:button:outcome] attribute.
+aui-button-param=URL *parameters* can be specified via [vdldoc:f:param] child tags. Setting [vdldoc:aui:button:includeViewParams] to `true` will automatically include all of the [vdldoc:f:viewParam] tags (view parameters) as URL parameters.
+aui-button-various-styles=The component can be *styled* with Bootstrap class names as described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#buttons" target="_blank">Alloy Base CSS</a> documentation.
+aui-commandbutton=[javadoc:com.liferay.faces.alloy.component.commandbutton.CommandButton] is a [javadoc:javax.faces.component.UICommand] component that renders a styleable HTML `&lt;button&gt;` element. The default [vdldoc:aui:commandButton:type] is `submit`. Since it extends [javadoc:javax.faces.component.html.HtmlCommandButton], it supports all the features of [vdldoc:h:commandButton]. The component *must be a child* of [vdldoc:h:form] in order to trigger the [vdldoc:aui:commandButton:action] or [vdldoc:aui:commandButton:actionListener].
+aui-commandbutton-general=*Children* such as [vdldoc:aui:icon], [vdldoc:h:outputText], and [vdldoc:h:graphicImage] can be specified for styling purposes. Alternatively, the [vdldoc:aui:commandButton:image] and [vdldoc:aui:commandButton:value] attributes can be specified for styling purposes.
+aui-commandbutton-general-example-1=Styling via children
+aui-commandbutton-general-example-2=Styling via [vdldoc:aui:commandbutton:image] attribute
+aui-commandbutton-general-example-3=Styling via [vdldoc:aui:commandbutton:value] attribute (*Note:* This can only be used if the component does not have any children and the component does not specify an image)
+aui-commandbutton-navigation=The component can be used to *navigate* between pages with the [vdldoc:aui:commandbutton:action] attribute. By specifying a `&lt;redirect&gt;` element in the `navigation-rule`, it will utilize the POST/REDIRECT/GET pattern.
+aui-commandbutton-param=URL *parameters* can be specified via the [vdldoc:aui:commandbutton:action] attribute. By specifying a `faces-redirect=true` parameter in the action attribute, it will utilize the POST/REDIRECT/GET pattern.
+aui-commandbutton-value-attribute=Although the component&apos;s [vdldoc:aui:commandButton:value] attribute is *read-only* (can&apos;t be changed via form submission), it can be used to determine that an item has been selected by the user.
+aui-commandbutton-various-styles=The component can be *styled* with Bootstrap class names as described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#buttons" target="_blank">Alloy Base CSS</a> documentation.
 aui-datepicker=[javadoc:com.liferay.faces.alloy.component.datepicker.DatePicker] is a [javadoc:javax.faces.component.UIPanel] component that renders a popup a calendar with selectable dates.
 aui-datepicker-date-pattern=A *custom pattern* can be specified via the [vdldoc:aui:datePicker:datePattern] attribute. The syntax of the date pattern follows the format specified by [javadoc:java.text.SimpleDateFormat].
 aui-datepicker-general=The component can be attached to an [vdldoc:h:inputText] or [vdldoc:h:inputTextarea] via the [vdldoc:aui:datePicker:for] attribute.
@@ -14,6 +31,8 @@ aui-datepicker-multiple-panes=The amount of month *panes* that are displayed can
 aui-datepicker-multiple-selection=The *date selection mode* can be specified via the [vdldoc:aui:datePicker:selectionMode] attribute. Valid values include "single" (the default), "multiple," or "multiple-sticky." The character(s) separating the selected dates can be specified via the [vdldoc:aui:datePicker:dateSeparator] attribute.
 aui-datepicker-multiple-selection-example-1=Hold down shift or control to select multiple dates
 aui-datepicker-multiple-selection-example-2=Pop up the datePicker multiple times to select multiple dates
+aui-icon=[javadoc:com.liferay.faces.alloy.component.icon.Icon] is a [javadoc:javax.faces.component.UIComponent] that renders a span which contains an icon specified by the [vdldoc:aui:icon:name] attribute.
+aui-icon-general=The component displays an *icon* specified by the [vdldoc:aui:icon:name] attribute. Names are described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#icons" target="_blank">Alloy Base CSS</a> documentation.
 aui-input-date-benefits-description=since it combines date selection and text input in a single component.
 aui-starrating=[javadoc:com.liferay.faces.alloy.component.starrating.StarRating] is a [javadoc:javax.faces.component.UIInput] component that renders a set of stars. The user can click on a star to select a rating and click on the same star a second time to de-select a rating. Since it extends [javadoc:javax.faces.component.html.HtmlSelectOneRadio], it accepts [vdldoc:f:selectItem] or [vdldoc:f:selectItems] as child tags.
 aui-starrating-data-model=The component can display stars *dynamically* when the [vdldoc:f:selectItems:value] attribute of the child [vdldoc:f:selectItems] tag is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:f:selectItems:var] attribute of the child [vdldoc:f:selectItems] tag is used to introduce a variable name into the EL when iterating over the model.
@@ -30,28 +49,39 @@ aui-tabview-data-model=Since it extends [javadoc:javax.faces.component.UIData], 
 aui-thumbrating=[javadoc:com.liferay.faces.alloy.component.ThumbRating] is a [javadoc:javax.faces.component.UIInput] component that renders a pair of thumb icons that a user can select to indicate their favor. Since it extends [javadoc:javax.faces.component.html.HtmlSelectOneRadio], it accepts [vdldoc:f:selectItem] or [vdldoc:f:selectItems] as children.
 aui-thumbrating-general=The [vdldoc:aui:thumbRating:value] of the component must be of type [javadoc:java.lang.Boolean].
 aui-thumbrating-instant-ajax=The component supports *instant Ajax* by simply adding [vdldoc:f:ajax] as a child tag.
+back-to-navigation-with=Back to Navigation with
 bridge-inputfile=[javadoc:com.liferay.faces.bridge.component.HtmlInputFile] is a [javadoc:javax.faces.component.UIInput] component that renders an HTML *&lt;input type="file" /&gt;* element. The component requires the [vdldoc:h:form:enctype] attribute of the encosing [vdldoc:h:form] tag to be *"multipart/form-data"* and only works in a full-page (non-Ajax) postback.
 bridge-inputfile-general=The HTML5 [vdldoc:bridge:inputFile:multiple] attribute can be set to *"multiple"* in order to support multi-file uploads.  
+block=Block
 component=Component
+danger=Danger
 data-model=Data Model
 date-pattern=Date Pattern
 description=Description
+default=Default
 dislike=Dislike
 example=Example
 example-1=Example #1
 example-2=Example #2
+example-3=Example #3
 favorite=Favorite
 hyperlink-targeting-the-showcase-portlet=Hyperlink targeting the Showcase portlet
 general=General
+info=Info
 instant-ajax=Instant Ajax
+inverse=Inverse
+large=Large
 like=Like
+link=Link
 locale-from-el=locale from EL
 localization=Localization
 min-max-date=Min/Max Date
+mini=Mini
 model-value=Model Value
 multiple-panes=Multiple Panes
 multiple-selection=Multiple Selection
 note=Note
+param=Param
 please-consider-using=Please consider using
 portlet-actionurl=[javadoc:com.liferay.faces.bridge.component.PortletActionURL] is a [javadoc:javax.faces.component.UIOutput] component that provides the ability to get a [javadoc:javax.portlet.PortletURL] that invokes the ACTION_PHASE of the portlet lifecycle targeting the current portlet.
 portlet-actionurl-general=Specify [vdldoc:portlet:param] as a child tag in order to add portlet *action parameters* to the URL. The [vdldoc:portlet:actionURL] component tag is *provided for the sake of completeness* since it has little purpose in JSF portlets. As shown in the example below, a *practical use-case* might be to @Override [javadoc:javax.portlet.faces.GenericFacesPortlet] in order to intercept a non-JSF postback.
@@ -63,11 +93,19 @@ portlet-renderurl=[javadoc:com.liferay.faces.bridge.component.PortletRenderURL] 
 portlet-renderurl-general=Specify [vdldoc:portlet:param] as a child tag in order to add portlet *render parameters* to the URL.
 portlet-resourceurl=[javadoc:com.liferay.faces.bridge.component.PortletResourceURL] is a [javadoc:javax.faces.component.UIOutput] component that provides the ability to get a [javadoc:javax.portlet.ResourceURL] that invokes the RESOURCE_PHASE of the portlet lifecycle targeting the current portlet. 
 portlet-resourceurl-general=Specify [vdldoc:portlet:param] as a child tag in order to add portlet resource parameters to the URL. The example below shows how to specify the *javax.faces.resource* and *ln* portlet *resource parameters* in order to get a URL that targets a JSF *image* resource.
+primary=Primary
 rendered=Rendered
+small=Small
 source-code=Source Code
 sticky-multiple-selection=Sticky Multiple Selection
 submit=Submit
 submit-non-faces-postback=Submit Non-Faces Postback
+success=Success
+to-param-page=To Param page
 usage=Usage
 valid-date-range=Valid Date Range
+value-attribute=Value Attribute
+value-of-foo-param=Value of foo Param
+various-styles=Various Styles
 vdl-documentation=VDL Documentation
+warning=Warning
