FACES-1714 Develop Liferay Faces Showcase (added use cases for h:inputTextarea)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -34,6 +34,15 @@ aui-datepicker-multiple-selection-example-2=Pop up the datePicker multiple times
 aui-icon=[javadoc:com.liferay.faces.alloy.component.icon.Icon] is a [javadoc:javax.faces.component.UIComponent] that renders a span which contains an icon specified by the [vdldoc:aui:icon:name] attribute.
 aui-icon-general=The component displays an *icon* specified by the [vdldoc:aui:icon:name] attribute. Names are described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#icons" target="_blank">Alloy Base CSS</a> documentation.
 aui-input-date-benefits-description=since it combines date selection and text input in a single component.
+aui-inputtextarea=[javadoc:com.liferay.faces.alloy.component.inputtextarea.InputTextarea] is a [javadoc:javax.faces.component.UIInput] component that renders a field for editing *multi-line text*. Since it extends [javadoc:javax.faces.component.html.HtmlInputTextarea], it supports all the features of [vdldoc:h:inputTextarea].
+aui-inputtextarea-conversion=The [vdldoc:aui:inputTextarea:value] attribute can be *converted* via the [vdldoc:aui:inputTextarea:converter] attribute or by specifying an [vdldoc:f:converter] child tag. In addition, custom user feedback can be specified via the [vdldoc:aui:inputTextarea:converterMessage] attribute.
+aui-inputtextarea-conversion-example-1=Conversion to an [javadoc:java.lang.Integer] via the [vdldoc:aui:inputTextarea:converter] attribute.
+aui-inputtextarea-conversion-example-2=Conversion to an [javadoc:java.lang.Integer] by specifying an [vdldoc:f:converter] child tag.
+aui-inputtextarea-general=The [vdldoc:aui:inputTextarea:value] attribute can be *bound to a model bean property* via EL.
+aui-inputtextarea-right-to-left=The component supports *Right-To-Left* language input by setting the [vdldoc:aui:inputTextarea:dir] and [vdldoc:aui:inputTextarea:lang] attributes.
+aui-inputtextarea-validation=The [vdldoc:aui:inputTextarea:value] attribute can be *validated* via the [vdldoc:aui:inputTextarea:validator] attribute or by specifying an [vdldoc:f:validator] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:aui:inputTextarea:validatorMessage] attribute.
+aui-inputtextarea-validation-example-1=Validating an *email address* via the [vdldoc:aui:inputTextarea:validator] attribute.
+aui-inputtextarea-validation-example-2=Validating an *email address* via specifying an [vdldoc:f:validateRegex] child tag.
 aui-starrating=[javadoc:com.liferay.faces.alloy.component.starrating.StarRating] is a [javadoc:javax.faces.component.UIInput] component that renders a set of stars. The user can click on a star to select a rating and click on the same star a second time to de-select a rating. Since it extends [javadoc:javax.faces.component.html.HtmlSelectOneRadio], it accepts [vdldoc:f:selectItem] or [vdldoc:f:selectItems] as child tags.
 aui-starrating-data-model=The component can display stars *dynamically* when the [vdldoc:f:selectItems:value] attribute of the child [vdldoc:f:selectItems] tag is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:f:selectItems:var] attribute of the child [vdldoc:f:selectItems] tag is used to introduce a variable name into the EL when iterating over the model.
 aui-starrating-default-value=A *default value* can be specified using one of two ways:
@@ -54,6 +63,8 @@ bridge-inputfile=[javadoc:com.liferay.faces.bridge.component.HtmlInputFile] is a
 bridge-inputfile-general=The HTML5 [vdldoc:bridge:inputFile:multiple] attribute can be set to *"multiple"* in order to support multi-file uploads.  
 block=Block
 component=Component
+conversion=Conversion
+converter-message=Failed to convert this field
 danger=Danger
 data-model=Data Model
 date-pattern=Date Pattern
@@ -95,6 +106,9 @@ portlet-resourceurl=[javadoc:com.liferay.faces.bridge.component.PortletResourceU
 portlet-resourceurl-general=Specify [vdldoc:portlet:param] as a child tag in order to add portlet resource parameters to the URL. The example below shows how to specify the *javax.faces.resource* and *ln* portlet *resource parameters* in order to get a URL that targets a JSF *image* resource.
 primary=Primary
 rendered=Rendered
+required=Required
+required-message=This is a required field
+right-to-left=Right-To-Left
 small=Small
 source-code=Source Code
 sticky-multiple-selection=Sticky Multiple Selection
@@ -104,6 +118,8 @@ success=Success
 to-param-page=To Param page
 usage=Usage
 valid-date-range=Valid Date Range
+validation=Validation
+validator-message=Invalid E-Mail Address
 value-attribute=Value Attribute
 value-of-foo-param=Value of foo Param
 various-styles=Various Styles
