FACES-1894 Add general utilities for Liferay Faces Alloy Components (Added style attribute to all generated components. Added style encodeing to encodeStyleable. Fixed typo in encodeStyleable. Added generate-xml profile to alloy pom.xml so that xml generation can be done seperately from component generation. Moved descriptions from attributes to elements in components-ext.xml to make html styling simpler.)

--- a/alloy/generator.properties
+++ b/alloy/generator.properties
@@ -15,8 +15,8 @@ builder.copyright.year=2014
 builder.faces.output.dir=src/main/java
 builder.faces.taglib.xml.output.dir=src/main/resources/META-INF
 builder.faces.version=3.2.5-ga6
-builder.faces.renderer.base.parent.class=com.liferay.faces.alloy.renderkit.AlloyRendererBase
-builder.faces.component.default.parent.class=javax.faces.component.UIPanel
+builder.faces.default.alloy.renderer.parent.class=com.liferay.faces.alloy.renderkit.AlloyRendererBase
+builder.faces.component.default.parent.class=javax.faces.component.UIComponentBase
 builder.namespace=widget
 
 # This list is a list of attributes which have the same name but different meanings in JSF and Alloy. The
@@ -268,4 +268,4 @@ transformer.components.excluded=\
 	WidgetTrigger
 
 transformer.input.json=${HOME}/.alloyui/alloy-build/alloy-ui-2.0.0-deprecated/api/data.json
-transformer.output.xml=target/alloy-generator/data.xml
+transformer.output.xml=${HOME}/.alloyui/data.xml
