--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -26,14 +26,26 @@ aui-datepicker-instant-ajax=The component supports *instant Ajax* by simply addi
 aui-datepicker-localization=A *custom locale* can be specified via the [vdldoc:aui:datePicker:locale] attribute.
 aui-datepicker-localization-example-1=Hard coded Brazilian Portuguese locale
 aui-datepicker-localization-example-2=Japanese [javadoc:java.util.Locale] obtained from a bean via EL
-aui-datepicker-min-max-date=*Minimum and maximum dates* can be specified via the [vdldoc:aui:datePicker:minDate] and [vdldoc:aui:datePicker:maxDate] attributes.
-aui-datepicker-multiple-panes=The amount of month *panes* that are displayed can be specified via the [vdldoc:aui:datePicker:panes] attribute (maximum of 3).
+aui-datepicker-min-max-date=*Minimum and maximum dates* can be specified via the [vdldoc:aui:datePicker:minimumDate] and [vdldoc:aui:datePicker:maximumDate] attributes.
+aui-datepicker-multiple-panes=The number of month *panes* that are displayed can be specified via the [vdldoc:aui:datePicker:panes] attribute (maximum of 3).
 aui-datepicker-multiple-selection=The *date selection mode* can be specified via the [vdldoc:aui:datePicker:selectionMode] attribute. Valid values include "single" (the default), "multiple," or "multiple-sticky." The character(s) separating the selected dates can be specified via the [vdldoc:aui:datePicker:dateSeparator] attribute.
 aui-datepicker-multiple-selection-example-1=Hold down shift or control to select multiple dates
 aui-datepicker-multiple-selection-example-2=Pop up the datePicker multiple times to select multiple dates
 aui-icon=[javadoc:com.liferay.faces.alloy.component.icon.Icon] is a [javadoc:javax.faces.component.UIComponent] that renders a span which contains an icon specified by the [vdldoc:aui:icon:name] attribute.
 aui-icon-general=The component displays an *icon* specified by the [vdldoc:aui:icon:name] attribute. Names are described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#icons" target="_blank">Alloy Base CSS</a> documentation.
 aui-input-date-benefits-description=since it combines date selection and text input in a single component.
+aui-inputdate=[javadoc:com.liferay.faces.alloy.component.inputdate.InputDate] is a [javadoc:javax.faces.component.UIInput] component that renders a textbox and a popup a calendar with selectable dates. The component attepts to automatically convert the submitted value to a [javadoc:java.util.Date] via a built in [javadoc:javax.faces.convert.DateTimeConverter].
+aui-inputdate-date-pattern=A *custom pattern* can be specified via the [vdldoc:aui:inputDate:datePattern] attribute. The syntax of the date pattern follows the format specified by [javadoc:java.text.SimpleDateFormat].
+aui-inputdate-general=The [vdldoc:aui:inputDate:showOn] attribute specifies which events will popup the calendar.
+aui-inputdate-general-example-1=Specifying *focus* (the default) for the `showOn` attribute pops up the calendar when the textbox receives focus.
+aui-inputdate-general-example-2=Specifying *button* for the `showOn` attribute pops up the calendar when the button is clicked.
+aui-inputdate-general-example-3=Specifying *both* for the `showOn` attribute pops up the calendar when the textbox receives focus and when the button is clicked.
+aui-inputdate-instant-ajax=The component supports *instant Ajax* by simply adding an [vdldoc:f:ajax] child tag.
+aui-inputdate-localization=A *custom locale* can be specified via the [vdldoc:aui:inputDate:locale] attribute.
+aui-inputdate-localization-example-1=Hard coded Brazilian Portuguese locale
+aui-inputdate-localization-example-2=Japanese [javadoc:java.util.Locale] obtained from a bean via EL
+aui-inputdate-min-max-date=*Minimum and maximum dates* can be specified via the [vdldoc:aui:inputDate:minimumDate] and [vdldoc:aui:inputDate:maximumDate] attributes. The component performs server side validation to ensure that submitted values are within the specified range.
+aui-inputdate-multiple-panes=The number of month *panes* that are displayed can be specified via the [vdldoc:aui:inputDate:panes] attribute (maximum of 3).
 aui-inputtextarea=[javadoc:com.liferay.faces.alloy.component.inputtextarea.InputTextarea] is a [javadoc:javax.faces.component.UIInput] component that renders a field for editing *multi-line text*. Since it extends [javadoc:javax.faces.component.html.HtmlInputTextarea], it supports all the features of [vdldoc:h:inputTextarea].
 aui-inputtextarea-conversion=The [vdldoc:aui:inputTextarea:value] attribute can be *converted* via the [vdldoc:aui:inputTextarea:converter] attribute or by specifying an [vdldoc:f:converter] child tag. In addition, custom user feedback can be specified via the [vdldoc:aui:inputTextarea:converterMessage] attribute.
 aui-inputtextarea-conversion-example-1=Conversion to an [javadoc:java.lang.Integer] via the [vdldoc:aui:inputTextarea:converter] attribute.
