FACES-1925 Please consider these outputText, outputRemainingChars, and popover components for inclusion.

--- a/demos/showcase/showcase-webapp/src/main/resources/aui.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/aui.properties
@@ -4,6 +4,9 @@ aui_commandButton=general:commandButton.xhtml|navigation:commandButton.xhtml,nav
 aui_datePicker=general:datePicker.xhtml,DatePickerModelBean.java|instant-ajax:datePicker.xhtml,DatePickerModelBean.java|date-pattern:datePicker.xhtml,DatePickerModelBean.java|localization:datePicker.xhtml,DatePickerModelBean.java|min-max-date:datePicker.xhtml,DatePickerModelBean.java|multiple-panes:datePicker.xhtml,DatePickerModelBean.java|multiple-selection:datePicker.xhtml,DatePickerModelBean.java
 aui_icon=general:icon.xhtml
 aui_inputTextarea=general:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|conversion:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|validation:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|right-to-left:inputTextarea.xhtml
+aui_outputRemainingChars=general:outputRemainingChars.xhtml,OutputRemainingCharsModelBean.java|default-value:outputRemainingChars.xhtml|max-length-events:outputRemainingChars.xhtml
+aui_outputText=general:outputText.xhtml,OutputTextModelBean.java|conversion:outputText.xhtml,OutputTextModelBean.java|right-to-left:outputText.xhtml
+aui_popover=general:popover.xhtml,PopoverModelBean.java
 aui_starRating=general:starRating.xhtml,StarRatingModelBean.java,StarRatingBackingBean.java|data-model:starRating.xhtml,StarRatingModelBean.java,StarRatingBackingBean.java|default-value:starRating.xhtml,StarRatingModelBean.java,StarRatingBackingBean.java|instant-ajax:starRating.xhtml,StarRatingModelBean.java
 aui_tabView=general:tabView.xhtml|data-model:tabView.xhtml,TabViewModelBean.java
 aui_thumbRating=general:thumbRating.xhtml,ThumbRatingModelBean.java,ThumbRatingBackingBean.java|instant-ajax:thumbRating.xhtml,ThumbRatingModelBean.java,ThumbRatingBackingBean.java
