--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -43,12 +43,27 @@ aui-inputtextarea-right-to-left=The component supports *Right-To-Left* language 
 aui-inputtextarea-validation=The [vdldoc:aui:inputTextarea:value] attribute can be *validated* via the [vdldoc:aui:inputTextarea:validator] attribute or by specifying an [vdldoc:f:validator] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:aui:inputTextarea:validatorMessage] attribute.
 aui-inputtextarea-validation-example-1=Validating an *email address* via the [vdldoc:aui:inputTextarea:validator] attribute.
 aui-inputtextarea-validation-example-2=Validating an *email address* via specifying an [vdldoc:f:validateRegex] child tag.
+aui-outputremainingchars=[javadoc:com.liferay.faces.alloy.component.outputremainingchars.OutputRemainingChars] is a [javadoc:javax.faces.component.UIOutput] component that displays the number of characters remaining for an associated [vdldoc:h:inputText] or [vdldoc:h:inputTextarea].
+aui-outputremainingchars-general=There are two basic ways to use this component:
+aui-outputremainingchars-general-example-1=Use the [vdldoc:aui:outputRemainingChars:for] attribute to indicate an [vdldoc:h:inputText] and the [vdldoc:aui:outputRemainingChars:value] attribute to render output.
+aui-outputremainingchars-general-example-2=Use the [vdldoc:aui:outputRemainingChars:for] attribute to indicate an [vdldoc:h:inputTextarea] and the [vdldoc:aui:outputRemainingChars:value] attribute to render output.
+aui-outputremainingchars-default-value=When a *default value* of an associated [vdldoc:h:inputText] or [vdldoc:h:inputTextarea] is specified, then the [vdldoc:aui:outputRemainingChars] will calculate the number of remaining characters before rendering.
+aui-outputremainingchars-max-length-events=There are two attributes to use for events:
+aui-outputremainingchars-max-length-reached-1=Use the [vdldoc:aui:outputRemainingChars:onMaxlengthReached] attribute to create an event which will be executed *each and every time* that the maxlength is reached.
+aui-outputremainingchars-max-length-reached-2=Use the [vdldoc:aui:outputRemainingChars:onceMaxlengthReached] attribute to create an event which will only be executed *the first time* that the maxlength is reached.
+aui-outputtext=[javadoc:com.liferay.faces.alloy.component.outputtext.OutputText] is a [javadoc:javax.faces.component.UIOutput] component that renders its own value as text. Since it extends [javadoc:javax.faces.component.html.HtmlOutputText], it supports all the features of [vdldoc:h:outputText].
+aui-outputtext-general=The [vdldoc:aui:outputText:value] attribute can be *bound to a model bean property* via EL.
+aui-outputtext-conversion=The [vdldoc:aui:outputText:value] attribute can be *converted* by specifying an [vdldoc:f:converter] child tag.
+aui-outputtext-right-to-left=The component supports *Right-To-Left* language input by setting the [vdldoc:aui:outputText:dir] and [vdldoc:aui:outputText:lang] attributes.
+aui-popover=[javadoc:com.liferay.faces.alloy.component.popover.Popover] is a [javadoc:javax.faces.component.UIOutput] component that renders its own attribute values as text. Since it extends [javadoc:com.liferay.faces.alloy.component.outputtext.OutputText], it supports all the features of [vdldoc:h:outputText].
+aui-popover-general=The [vdldoc:aui:popover:headerContent] and [vdldoc:aui:popover:bodyContent] attributes can be *bound to model bean properties* via EL.
+aui-popover-animation=The [vdldoc:aui:popover:effect] attribute can be use to add an animation effect.
 aui-starrating=[javadoc:com.liferay.faces.alloy.component.starrating.StarRating] is a [javadoc:javax.faces.component.UIInput] component that renders a set of stars. The user can click on a star to select a rating and click on the same star a second time to de-select a rating. Since it extends [javadoc:javax.faces.component.html.HtmlSelectOneRadio], it accepts [vdldoc:f:selectItem] or [vdldoc:f:selectItems] as child tags.
 aui-starrating-data-model=The component can display stars *dynamically* when the [vdldoc:f:selectItems:value] attribute of the child [vdldoc:f:selectItems] tag is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:f:selectItems:var] attribute of the child [vdldoc:f:selectItems] tag is used to introduce a variable name into the EL when iterating over the model.
 aui-starrating-default-value=A *default value* can be specified using one of two ways:
 aui-starrating-default-value-example-1=Initializing the default value in the model bean.
 aui-starrating-default-value-example-2=Setting the [vdldoc:aui:starRating:defaultSelected] attribute.
-aui-starrating-general=There are two basic ways to *bind* the [vdldoc:aui:starRating:value] attribute this component to a model bean property:
+aui-starrating-general=There are two basic ways to *bind* the [vdldoc:aui:starRating:value] attribute of this component to a model bean property:
 aui-starrating-general-example-1=String value (no converter required)
 aui-starrating-general-example-2=Object value (requires a converter)
 aui-starrating-instant-ajax=The component supports *instant Ajax* by simply adding [vdldoc:f:ajax] as a child tag.
@@ -86,6 +101,7 @@ like=Like
 link=Link
 locale-from-el=locale from EL
 localization=Localization
+max-length-events=Max Length Events
 min-max-date=Min/Max Date
 mini=Mini
 model-value=Model Value
