--- a/alloy/pom.xml
+++ b/alloy/pom.xml
@@ -77,12 +77,12 @@
 								<copy todir="${project.build.directory}/classes/META-INF/resources/liferay-faces-alloy/build">
 									<fileset dir="${env.HOME}/.alloyui/alloy-build/alloy-ui-${alloyui.version}/build" />
 								</copy>
-<!-- 								<replace token="../img/" value="#{resource['liferay-faces-alloy:build/aui-css/img/" dir="${project.build.directory}/classes/META-INF/resources/liferay-faces-alloy/build/aui-css/css"> -->
-<!-- 									<include name="bootstrap.min.css" /> -->
-<!-- 								</replace> -->
-<!-- 								<replace token=".png);" value=".png']});" dir="${project.build.directory}/classes/META-INF/resources/liferay-faces-alloy/build/aui-css/css"> -->
-<!-- 									<include name="bootstrap.min.css" /> -->
-<!-- 								</replace> -->
+								<replace token="../img/" value="#{resource['liferay-faces-alloy:build/aui-css/img/" dir="${project.build.directory}/classes/META-INF/resources/liferay-faces-alloy/build/aui-css/css">
+									<include name="bootstrap.min.css" />
+								</replace>
+								<replace token=".png)" value=".png']})" dir="${project.build.directory}/classes/META-INF/resources/liferay-faces-alloy/build/aui-css/css">
+									<include name="bootstrap.min.css" />
+								</replace>
 							</target>
 						</configuration>
 					</execution>
