FACES-1925 Please consider these outputText, outputRemainingChars, and popover components for inclusion.

--- a/demos/showcase/showcase-webapp/src/main/resources/aui.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/aui.properties
@@ -5,6 +5,9 @@ aui_datePicker=general:datePicker.xhtml,DatePickerModelBean.java|instant-ajax:da
 aui_icon=general:icon.xhtml
 aui_inputDate=general:inputDate.xhtml,InputDateModelBean.java|instant-ajax:inputDate.xhtml,InputDateModelBean.java|date-pattern:inputDate.xhtml,InputDateModelBean.java|localization:inputDate.xhtml,InputDateModelBean.java|min-max-date:inputDate.xhtml,InputDateModelBean.java|multiple-panes:inputDate.xhtml,InputDateModelBean.java
 aui_inputTextarea=general:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|conversion:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|validation:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|right-to-left:inputTextarea.xhtml
+aui_outputRemainingChars=general:outputRemainingChars.xhtml,OutputRemainingCharsModelBean.java|default-value:outputRemainingChars.xhtml|max-length-events:outputRemainingChars.xhtml
+aui_outputText=general:outputText.xhtml,OutputTextModelBean.java|conversion:outputText.xhtml,OutputTextModelBean.java|right-to-left:outputText.xhtml
+aui_popover=general:popover.xhtml,PopoverModelBean.java
 aui_starRating=general:starRating.xhtml,StarRatingModelBean.java,StarRatingBackingBean.java|data-model:starRating.xhtml,StarRatingModelBean.java,StarRatingBackingBean.java|default-value:starRating.xhtml,StarRatingModelBean.java,StarRatingBackingBean.java|instant-ajax:starRating.xhtml,StarRatingModelBean.java
 aui_tabView=general:tabView.xhtml|data-model:tabView.xhtml,TabViewModelBean.java
 aui_thumbRating=general:thumbRating.xhtml,ThumbRatingModelBean.java,ThumbRatingBackingBean.java|instant-ajax:thumbRating.xhtml,ThumbRatingModelBean.java,ThumbRatingBackingBean.java
