FACES-1926 Upgrade to Alloy UI version 2.0.0-deprecated

--- a/alloy/pom.xml
+++ b/alloy/pom.xml
@@ -105,6 +105,10 @@
 			<artifactId>javax.faces-api</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>javax.servlet.jsp</groupId>
 			<artifactId>javax.servlet.jsp-api</artifactId>
 		</dependency>
