FACES-1926 Upgrade to Alloy UI version 2.0.0-deprecated (changes necessary to run showcase-webapp in a plain servlet container)

--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/web.xml
@@ -42,6 +42,11 @@
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
+	<!-- Support deployment as a plain webapp -->
+	<servlet-mapping>
+		<servlet-name>Faces Servlet</servlet-name>
+		<url-pattern>*.faces</url-pattern>
+	</servlet-mapping>
 	<!-- Prevent direct access to Facelet view XHTML by the userAgent (browser). --> 
 	<security-constraint>
 		<web-resource-collection>
