--- a/demos/showcase/showcase-webapp/pom.xml
+++ b/demos/showcase/showcase-webapp/pom.xml
@@ -12,6 +12,24 @@
 	<name>Showcase Webapp</name>
 	<description>This plugin is the Liferay Faces Showcase demo webapp.</description>
 
+	<profiles>
+		<profile>
+			<id>prettyfaces</id>
+			<dependencies>
+				<dependency>
+				    <groupId>org.ocpsoft.rewrite</groupId>
+				    <artifactId>rewrite-servlet</artifactId>
+				    <version>2.0.11.Final</version>
+				</dependency>
+				<dependency>
+				    <groupId>org.ocpsoft.rewrite</groupId>
+				    <artifactId>rewrite-config-prettyfaces</artifactId>
+				    <version>2.0.11.Final</version>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
+
 	<build>
 		<resources>
 			<resource>
@@ -24,6 +42,7 @@
 				<directory>src/main/resources</directory>
 				<includes>
 					<include>**/*.properties</include>
+					<include>**/*.xml</include>
 				</includes>
 			</resource>
 		</resources>
