--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
 	</modules>
 
 	<properties>
-		<alloyui.version>2.0.0-deprecated</alloyui.version>
+		<alloyui.version>1.7.1</alloyui.version>
 		<app.server.type>tomcat</app.server.type>
 		<arquillian.version>1.1.1.Final</arquillian.version>
 		<arquillian.drone.version>1.2.0.Final</arquillian.drone.version>
