FACES-1926 (added alloyui.version property to minimize diffs across branches)

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
 	</modules>
 
 	<properties>
+		<alloyui.version>N/A</alloyui.version>
 		<app.server.type>tomcat</app.server.type>
 		<arquillian.version>1.1.1.Final</arquillian.version>
 		<arquillian.drone.version>1.2.0.Final</arquillian.drone.version>
