FACES-1926 Upgrade to Alloy UI version 2.0.0-deprecated

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
 	</modules>
 
 	<properties>
+		<alloyui.version>2.0.0-deprecated</alloyui.version>
 		<app.server.type>tomcat</app.server.type>
 		<arquillian.version>1.1.1.Final</arquillian.version>
 		<arquillian.drone.version>1.2.0.Final</arquillian.drone.version>
