--- a/alloy/generator.properties
+++ b/alloy/generator.properties
@@ -51,6 +51,7 @@ builder.namespaced.attributes=\
 	facets,\
 	facetsAndChildren,\
 	family,\
+	id,\
 	immediate,\
 	inView,\
 	listenersForEventClass,\
@@ -58,6 +59,7 @@ builder.namespaced.attributes=\
 	localValueSet,\
 	namingContainer,\
 	parent,\
+	rendered,\
 	renderer,\
 	rendererType,\
 	rendersChildren,\
@@ -67,6 +69,7 @@ builder.namespaced.attributes=\
 	stateHelper,\
 	submittedValue,\
 	transient,\
+	value,\
 	valid,\
 	validator,\
 	validatorMessage,\
@@ -76,18 +79,6 @@ builder.namespaced.attributes=\
 	valueChangeListeners,\
 	valueExpression,\
 	visitable
-
-# This is a list of attributes that have the same name AND the same meaning in both JSF and AlloyUI. This list contains
-# a map of key/value pairs (separated by |). The key is attribute names, and the value is the attribute type in Java
-# defined by JSF.
-# NOTE: this can also be done in components-ext.xml if it needs to be component specific. In the attribute tag simply
-# specify the following tags:
-# <jsfReservedAttribute>true</jsfReservedAttribute>
-# <jsfReservedAttributeType>type</jsfReservedAttributeType>
-builder.jsf.reserved.attributes=\
-	id|String,\
-	rendered|boolean,\
-	value|Object
 
 ##
 ## Transformer
