FACES-1929 Develop alloy:row and alloy:column components

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -79,6 +79,10 @@ alloy-pickdate-multiple-panes=The number of month *panes* that are displayed can
 alloy-pickdate-multiple-selection=The *date selection mode* can be specified via the [vdldoc:alloy:pickDate:selectionMode] attribute. Valid values include "single" (the default), "multiple," or "multiple-sticky." The character(s) separating the selected dates can be specified via the [vdldoc:alloy:pickDate:dateSeparator] attribute.
 alloy-pickdate-multiple-selection-example-1=Hold down shift or control to select multiple dates
 alloy-pickdate-multiple-selection-example-2=Pop up the pickDate multiple times to select multiple dates
+alloy-row=[javadoc:com.liferay.faces.alloy.component.row.Row] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` and is designed to be used in conjunction with [vdldoc:alloy:column] child component tags.
+alloy-row-general=The component takes [vdldoc:aui:column] tags as children in order to layout components in a tabular grid.
+alloy-row-column-width=The *width* of an [vdldoc:aui:column] can be specified via the [vdldoc:aui:column:width] attribute.
+alloy-row-column-offset=The *offset width* of an [vdldoc:aui:column] can be specified via the [vdldoc:aui:column:offsetWidth] attribute.
 alloy-selectoneradio=[javadoc:com.liferay.faces.alloy.component.selectoneradio.SelectOneRadio] is a [javadoc:javax.faces.component.UISelectOne] component that renders radio buttons. Since it extends [javadoc:javax.faces.component.html.HtmlSelectOneRadio], it supports all the features of [vdldoc:h:selectOneRadio] such as accepting [vdldoc:f:selectItem] or [vdldoc:f:selectItems] as child tags.
 alloy-selectoneradio-conversion=The [vdldoc:alloy:selectOneRadio:value] attribute can be *converted* by specifying an [vdldoc:f:converter] child tag.
 alloy-selectoneradio-data-model=The component will display *dynamically* when the [vdldoc:f:selectItems:value] attribute of the child [vdldoc:f:selectItems] tag is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:f:selectItems:var] attribute of the child [vdldoc:f:selectItems] tag is used to introduce a variable name into the EL when iterating over the model.
@@ -106,6 +110,8 @@ back-to-navigation-with=Back to Navigation with
 bridge-inputfile=[javadoc:com.liferay.faces.bridge.component.HtmlInputFile] is a [javadoc:javax.faces.component.UIInput] component that renders an HTML *&lt;input type="file" /&gt;* element. The component requires the [vdldoc:h:form:enctype] attribute of the encosing [vdldoc:h:form] tag to be *"multipart/form-data"* and only works in a full-page (non-Ajax) postback.
 bridge-inputfile-general=The HTML5 [vdldoc:bridge:inputFile:multiple] attribute can be set to *"multiple"* in order to support multi-file uploads. 
 block=Block
+column-width=Column Width
+column-offset=Column Offset
 component=Component
 conversion=Conversion
 conversion-to-a-date-using-converter-attribute=Conversion to a [javadoc:java.util.Date] using the [vdldoc:alloy:inputTextarea:converter] attribute
@@ -165,6 +171,9 @@ sticky-multiple-selection=Sticky Multiple Selection
 submit=Submit
 submit-non-faces-postback=Submit Non-Faces Postback
 success=Success
+this-is-column-1=This is column 1 with width="33"
+this-is-column-2=This is column 2 with width="33"
+this-is-column-3=This is column 3 with width="33"
 this-text-is-inside-a-span-html-tag=This text is inside a <span> HTML tag
 this-text-is-inside-a-div-html-tag=This text is inside a <div> HTML tag
 to-param-page=To Param page
