FACES-1935 Develop alloy:fieldset component

--- a/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
@@ -1,6 +1,7 @@
 alloy_button=general:button.xhtml|navigation:button.xhtml,navigation-rule.xml|param:button.xhtml|various-styles:button.xhtml
 alloy_commandButton=general:commandButton.xhtml|immediate:commandButton.xhtml,CommandButtonBackingBean.java|navigation:commandButton.xhtml,navigation-rule.xml|param:commandButton.xhtml|various-styles:commandButton.xhtml|value-attribute:commandButton.xhtml,CommandButtonModelBean.java,CommandButtonBackingBean.java,Customer.java
 alloy_field=general:field.xhtml
+alloy_fieldset=general:fieldset.xhtml
 alloy_icon=general:icon.xhtml
 alloy_inputDate=general:inputDate.xhtml,InputDateModelBean.java|instant-ajax:inputDate.xhtml,InputDateModelBean.java|date-pattern:inputDate.xhtml,InputDateModelBean.java|localization:inputDate.xhtml,InputDateModelBean.java|min-max-date:inputDate.xhtml,InputDateModelBean.java|multiple-panes:inputDate.xhtml,InputDateModelBean.java
 alloy_inputSourceCode=general:inputSourceCode.xhtml,InputSourceCodeModelBean.java,InputSourceCodeBackingBean.java|default-value:inputSourceCode.xhtml,InputSourceCodeModelBean.java,InputSourceCodeBackingBean.java
