--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -22,6 +22,8 @@ alloy-commandbutton-various-styles=The component can be *styled* with Bootstrap 
 alloy-field=[javadoc:com.liferay.faces.alloy.component.field.Field] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` element and a `&lt;label&gt;` element in order to wrap a field. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
 alloy-field-general=A *label* can be specified via the [vdldoc:alloy:field:label] attribute. In addition, the [vdldoc:alloy:field:id] attribute is typically referenced by the [vdldoc:f:ajax] tag in order to re-render an input field and a corresponding message.
 alloy-field-general-example-1=Re-rendering a field via [vdldoc:f:ajax].
+alloy-fieldset=[javadoc:com.liferay.faces.alloy.component.fieldset.Fieldset] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;fieldset&gt;` element in order to group form elements.
+alloy-fieldset-general=A *header* for the component can be specified via the [vdldoc:alloy:fieldset:legend] attribute.
 alloy-icon=[javadoc:com.liferay.faces.alloy.component.icon.Icon] is a [javadoc:javax.faces.component.UIComponent] that renders a span which contains an icon specified by the [vdldoc:alloy:icon:name] attribute.
 alloy-icon-general=The component displays an *icon* specified by the [vdldoc:alloy:icon:name] attribute. Names are described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#icons" target="_blank">Alloy Base CSS</a> documentation.
 alloy-input-date-benefits-description=since it combines date selection and text input in a single component.
@@ -130,6 +132,7 @@ dislike=Dislike
 example=Example
 favorite-liferay-benefit=Favorite Liferay Benefit
 field-label=Field Label
+fieldset-legend=Fieldset Legend
 hyperlink-targeting-the-showcase-portlet=Hyperlink targeting the Showcase portlet
 general=General
 immediate=Immediate
@@ -181,6 +184,8 @@ this-is-column-2=This is column 2 with width="33"
 this-is-column-3=This is column 3 with width="33"
 this-text-is-inside-a-span-html-tag=This text is inside a <span> HTML tag
 this-text-is-inside-a-div-html-tag=This text is inside a <div> HTML tag
+text-box-1=Text Box #1
+text-box-2=Text Box #2
 to-param-page=To Param page
 usage=Usage
 valid-date-range=Valid Date Range
