--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -6,7 +6,7 @@ aui-button=[javadoc:com.liferay.faces.alloy.component.button.Button] is a [javad
 aui-button-general=*Children* such as [vdldoc:aui:icon], [vdldoc:h:outputText], and [vdldoc:h:graphicImage] can be specified for styling purposes. Alternatively, the [vdldoc:aui:button:image] and [vdldoc:aui:button:value] attributes can be specified for styling purposes.
 aui-button-general-example-1=Styling via children
 aui-button-general-example-2=Styling via [vdldoc:aui:button:image] attribute
-aui-button-general-example-3=Styling via [vdldoc:aui:button:value] attribute (*Note:* This can only be used if the component does not have any children and the component does not specify an image)
+aui-button-general-example-3=Styling via [vdldoc:aui:button:value] attribute
 aui-button-navigation=The component can be used to *navigate* between pages with the [vdldoc:aui:button:outcome] attribute.
 aui-button-param=URL *parameters* can be specified via [vdldoc:f:param] child tags. Setting [vdldoc:aui:button:includeViewParams] to `true` will automatically include all of the [vdldoc:f:viewParam] tags (view parameters) as URL parameters.
 aui-button-various-styles=The component can be *styled* with Bootstrap class names as described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#buttons" target="_blank">Alloy Base CSS</a> documentation.
@@ -14,7 +14,7 @@ aui-commandbutton=[javadoc:com.liferay.faces.alloy.component.commandbutton.Comma
 aui-commandbutton-general=*Children* such as [vdldoc:aui:icon], [vdldoc:h:outputText], and [vdldoc:h:graphicImage] can be specified for styling purposes. Alternatively, the [vdldoc:aui:commandButton:image] and [vdldoc:aui:commandButton:value] attributes can be specified for styling purposes.
 aui-commandbutton-general-example-1=Styling via children
 aui-commandbutton-general-example-2=Styling via [vdldoc:aui:commandbutton:image] attribute
-aui-commandbutton-general-example-3=Styling via [vdldoc:aui:commandbutton:value] attribute (*Note:* This can only be used if the component does not have any children and the component does not specify an image)
+aui-commandbutton-general-example-3=Styling via [vdldoc:aui:commandbutton:value] attribute
 aui-commandbutton-navigation=The component can be used to *navigate* between pages with the [vdldoc:aui:commandbutton:action] attribute. By specifying a `&lt;redirect&gt;` element in the `navigation-rule`, it will utilize the POST/REDIRECT/GET pattern.
 aui-commandbutton-param=URL *parameters* can be specified via the [vdldoc:aui:commandbutton:action] attribute. By specifying a `faces-redirect=true` parameter in the action attribute, it will utilize the POST/REDIRECT/GET pattern.
 aui-commandbutton-value-attribute=Although the component&apos;s [vdldoc:aui:commandButton:value] attribute is *read-only* (can&apos;t be changed via form submission), it can be used to determine that an item has been selected by the user.
@@ -37,9 +37,9 @@ aui-input-date-benefits-description=since it combines date selection and text in
 aui-inputdate=[javadoc:com.liferay.faces.alloy.component.inputdate.InputDate] is a [javadoc:javax.faces.component.UIInput] component that renders a textbox and a popup a calendar with selectable dates. The component attepts to automatically convert the submitted value to a [javadoc:java.util.Date] via a built in [javadoc:javax.faces.convert.DateTimeConverter].
 aui-inputdate-date-pattern=A *custom pattern* can be specified via the [vdldoc:aui:inputDate:datePattern] attribute. The syntax of the date pattern follows the format specified by [javadoc:java.text.SimpleDateFormat].
 aui-inputdate-general=The [vdldoc:aui:inputDate:showOn] attribute specifies which events will popup the calendar.
-aui-inputdate-general-example-1=Specifying *focus* (the default) for the `showOn` attribute pops up the calendar when the textbox receives focus.
-aui-inputdate-general-example-2=Specifying *button* for the `showOn` attribute pops up the calendar when the button is clicked.
-aui-inputdate-general-example-3=Specifying *both* for the `showOn` attribute pops up the calendar when the textbox receives focus and when the button is clicked.
+aui-inputdate-general-example-1=Specifying *focus* (the default) for the `showOn` attribute.
+aui-inputdate-general-example-2=Specifying *button* for the `showOn` attribute.
+aui-inputdate-general-example-3=Specifying *both* for the `showOn` attribute.
 aui-inputdate-instant-ajax=The component supports *instant Ajax* by simply adding an [vdldoc:f:ajax] child tag.
 aui-inputdate-localization=A *custom locale* can be specified via the [vdldoc:aui:inputDate:locale] attribute.
 aui-inputdate-localization-example-1=Hard coded Brazilian Portuguese locale
@@ -55,12 +55,24 @@ aui-inputtextarea-right-to-left=The component supports *Right-To-Left* language 
 aui-inputtextarea-validation=The [vdldoc:aui:inputTextarea:value] attribute can be *validated* via the [vdldoc:aui:inputTextarea:validator] attribute or by specifying an [vdldoc:f:validator] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:aui:inputTextarea:validatorMessage] attribute.
 aui-inputtextarea-validation-example-1=Validating an *email address* via the [vdldoc:aui:inputTextarea:validator] attribute.
 aui-inputtextarea-validation-example-2=Validating an *email address* via specifying an [vdldoc:f:validateRegex] child tag.
+aui-outputremainingchars=[javadoc:com.liferay.faces.alloy.component.outputremainingchars.OutputRemainingChars] is a [javadoc:javax.faces.component.UIOutput] component that displays the number of characters remaining for an associated [vdldoc:h:inputText] or [vdldoc:h:inputTextarea].
+aui-outputremainingchars-general=The [vdldoc:aui:outputRemainingChars:value] attribute can contain text with a `{0}` token that is substituted with the number of remaining characters. If the `value` attribute is not specified, then only the number of remaining characters are rendered.
+aui-outputremainingchars-general-example-1=Associate with an [vdldoc:h:inputText] and specify a `{0}` token within the [vdldoc:aui:outputRemainingChars:value] attribute.
+aui-outputremainingchars-general-example-2=Associate with an [vdldoc:h:inputTextarea] and simply render the number of remaining characters.
+aui-outputremainingchars-default-value=When a *default value* of an associated [vdldoc:h:inputText] or [vdldoc:h:inputTextarea] is specified, the number of remaining characters will be calculated before rendering.
+aui-outputremainingchars-max-length-events=There are two attributes to use for events:
+aui-outputremainingchars-max-length-reached-1=The [vdldoc:aui:outputRemainingChars:onMaxlengthReached] event occurs *every time* maxlength is reached.
+aui-outputremainingchars-max-length-reached-2=The [vdldoc:aui:outputRemainingChars:onceMaxlengthReached] event occurs *the first time* maxlength is reached.
+aui-outputtext=[javadoc:com.liferay.faces.alloy.component.outputtext.OutputText] is a [javadoc:javax.faces.component.UIOutput] component that renders its own value as text. Since it extends [javadoc:javax.faces.component.html.HtmlOutputText], it supports all the features of [vdldoc:h:outputText].
+aui-outputtext-general=The [vdldoc:aui:outputText:value] attribute can be *bound* to a model bean property via EL.
+aui-outputtext-conversion=The [vdldoc:aui:outputText:value] attribute can be *converted* by specifying an [vdldoc:f:converter] child tag.
+aui-outputtext-right-to-left=The component supports *Right-To-Left* language input by setting the [vdldoc:aui:outputText:dir] and [vdldoc:aui:outputText:lang] attributes.
 aui-starrating=[javadoc:com.liferay.faces.alloy.component.starrating.StarRating] is a [javadoc:javax.faces.component.UIInput] component that renders a set of stars. The user can click on a star to select a rating and click on the same star a second time to de-select a rating. Since it extends [javadoc:javax.faces.component.html.HtmlSelectOneRadio], it accepts [vdldoc:f:selectItem] or [vdldoc:f:selectItems] as child tags.
 aui-starrating-data-model=The component can display stars *dynamically* when the [vdldoc:f:selectItems:value] attribute of the child [vdldoc:f:selectItems] tag is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:f:selectItems:var] attribute of the child [vdldoc:f:selectItems] tag is used to introduce a variable name into the EL when iterating over the model.
 aui-starrating-default-value=A *default value* can be specified using one of two ways:
 aui-starrating-default-value-example-1=Initializing the default value in the model bean.
 aui-starrating-default-value-example-2=Setting the [vdldoc:aui:starRating:defaultSelected] attribute.
-aui-starrating-general=There are two basic ways to *bind* the [vdldoc:aui:starRating:value] attribute this component to a model bean property:
+aui-starrating-general=There are two basic ways to *bind* the [vdldoc:aui:starRating:value] attribute of this component to a model bean property:
 aui-starrating-general-example-1=String value (no converter required)
 aui-starrating-general-example-2=Object value (requires a converter)
 aui-starrating-instant-ajax=The component supports *instant Ajax* by simply adding [vdldoc:f:ajax] as a child tag.
@@ -82,6 +94,7 @@ data-model=Data Model
 date-pattern=Date Pattern
 description=Description
 default=Default
+default-value=Default Value
 dislike=Dislike
 example=Example
 example-1=Example #1
@@ -98,13 +111,16 @@ like=Like
 link=Link
 locale-from-el=locale from EL
 localization=Localization
+max-length-events=Max Length Events
 min-max-date=Min/Max Date
 mini=Mini
 model-value=Model Value
 multiple-panes=Multiple Panes
 multiple-selection=Multiple Selection
+navigation=Navigation
 note=Note
 param=Param
+parameter-value=Parameter Value
 please-consider-using=Please consider using
 portlet-actionurl=[javadoc:com.liferay.faces.bridge.component.PortletActionURL] is a [javadoc:javax.faces.component.UIOutput] component that provides the ability to get a [javadoc:javax.portlet.PortletURL] that invokes the ACTION_PHASE of the portlet lifecycle targeting the current portlet.
 portlet-actionurl-general=Specify [vdldoc:portlet:param] as a child tag in order to add portlet *action parameters* to the URL. The [vdldoc:portlet:actionURL] component tag is *provided for the sake of completeness* since it has little purpose in JSF portlets. As shown in the example below, a *practical use-case* might be to @Override [javadoc:javax.portlet.faces.GenericFacesPortlet] in order to intercept a non-JSF postback.
