FACES-1714 Develop Liferay Faces Showcase (enable logging for showcase-webapp)

--- a/demos/showcase/showcase-webapp/pom.xml
+++ b/demos/showcase/showcase-webapp/pom.xml
@@ -70,6 +70,10 @@
 			<artifactId>liferay-faces-alloy</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+		</dependency>
 	</dependencies>
 	
 </project>
