FACES-1903 Develop alloy:inputSourceCode component (rename alloy:aceEditor to alloy:inputSourceCode)

--- a/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
@@ -1,9 +1,9 @@
-alloy_aceEditor=general:aceEditor.xhtml,AceEditorModelBean.java,AceEditorBackingBean.java|default-value:aceEditor.xhtml,AceEditorModelBean.java,AceEditorBackingBean.java
 alloy_button=general:button.xhtml|navigation:button.xhtml,navigation-rule.xml|param:button.xhtml|various-styles:button.xhtml
 alloy_commandButton=general:commandButton.xhtml|navigation:commandButton.xhtml,navigation-rule.xml|param:commandButton.xhtml|various-styles:commandButton.xhtml|value-attribute:commandButton.xhtml,CommandButtonModelBean.java,CommandButtonBackingBean.java,Customer.java
 alloy_datePicker=general:datePicker.xhtml,DatePickerModelBean.java|instant-ajax:datePicker.xhtml,DatePickerModelBean.java|date-pattern:datePicker.xhtml,DatePickerModelBean.java|localization:datePicker.xhtml,DatePickerModelBean.java|min-max-date:datePicker.xhtml,DatePickerModelBean.java|multiple-panes:datePicker.xhtml,DatePickerModelBean.java|multiple-selection:datePicker.xhtml,DatePickerModelBean.java
 alloy_icon=general:icon.xhtml
 alloy_inputDate=general:inputDate.xhtml,InputDateModelBean.java|instant-ajax:inputDate.xhtml,InputDateModelBean.java|date-pattern:inputDate.xhtml,InputDateModelBean.java|localization:inputDate.xhtml,InputDateModelBean.java|min-max-date:inputDate.xhtml,InputDateModelBean.java|multiple-panes:inputDate.xhtml,InputDateModelBean.java
+alloy_inputSourceCode=general:inputSourceCode.xhtml,AceEditorModelBean.java,AceEditorBackingBean.java|default-value:inputSourceCode.xhtml,AceEditorModelBean.java,AceEditorBackingBean.java
 alloy_inputTextarea=general:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|conversion:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|validation:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|right-to-left:inputTextarea.xhtml
 alloy_outputRemainingChars=general:outputRemainingChars.xhtml,OutputRemainingCharsModelBean.java|default-value:outputRemainingChars.xhtml|max-length-events:outputRemainingChars.xhtml
 alloy_outputText=general:outputText.xhtml,OutputTextModelBean.java|conversion:outputText.xhtml,OutputTextModelBean.java|right-to-left:outputText.xhtml
