FACES-1894 Add general utilities for Liferay Faces Alloy Components (Removed Popover from included components in generator.properties and regenerated. Removed anonymous self-executing javascript function from AlloyRendererUtil.encodeJavaScriptMain(). Added tip in generator.properties which explains when the generator's xml file needs to be regenerated.)

--- a/alloy/generator.properties
+++ b/alloy/generator.properties
@@ -89,11 +89,12 @@ transformer.comments.included=\
 	AceEditor,\
 	DatePicker,\
 	CharCounter,\
-	Popover,\
 	Rating,\
 	TabView,\
 	ThumbRating
 
+# Every time this list changes, you must regenerate the data.xml file by running:
+# mvn generate-sources -P generate-xml
 transformer.components.excluded=\
 	Aria,\
 	ArraySort,\
@@ -200,6 +201,7 @@ transformer.components.excluded=\
 	Palette,\
 	ParseContent,\
 	Plugin.IO,\
+	Popover,\
 	ProgressBar,\
 	PropertyList,\
 	RadioCellEditor,\
